Bug 292700 - dolphin doesn't show icon size tooltip for slider in view mode settings anymore
Summary: dolphin doesn't show icon size tooltip for slider in view mode settings anymore
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-28 16:14 UTC by Tanja Schulte
Modified: 2012-08-13 09:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tanja Schulte 2012-01-28 16:14:46 UTC
Version:           2.0 (using KDE 4.8.0) 
OS:                Linux

In KDE SC before 4.8 the slider to change the icon size in dolphin's view mode settings displayed a tooltip with the chosen size which was very very handy. This tooltip now is gone so I don't know which size I currently give the icons. To see it I have to save and close the settings, look at the file icons and then go back into the settings to make another little step with the slider, hopefully this time the right amount. That's complicated and too long-winded. 

Reproducible: Always

Steps to Reproduce:
Go to dolphin's view mode settings and drag the icon size slider somewhere. No tooltip showing the size anymore.

Actual Results:  
no slider tooltip

Expected Results:  
slider tooltip showing the size of the icons
Comment 1 Jekyll Wu 2012-08-13 05:27:09 UTC
Git commit 5e87cefd4c17467c3a650b133dc9bdadea22f9f7 by Jekyll Wu.
Committed on 11/08/2012 at 10:06.
Pushed by jekyllwu into branch 'master'.

Show icon size as tooltip when adjusting icon size
FIXED-IN: 4.10.0
REVIEW: 105990

M  +28   -0    dolphin/src/settings/viewmodes/viewsettingstab.cpp
M  +5    -0    dolphin/src/settings/viewmodes/viewsettingstab.h

http://commits.kde.org/kde-baseapps/5e87cefd4c17467c3a650b133dc9bdadea22f9f7
Comment 2 Jekyll Wu 2012-08-13 09:06:32 UTC
Git commit 94fe71342f5cfeb9d2d5566b566a7ae5208ca882 by Jekyll Wu.
Committed on 11/08/2012 at 10:06.
Pushed by jekyllwu into branch 'KDE/4.9'.

Show icon size as tooltip when adjusting icon size
FIXED-IN: 4.9.1
REVIEW: 105990
(cherry picked from commit 5e87cefd4c17467c3a650b133dc9bdadea22f9f7)

M  +28   -0    dolphin/src/settings/viewmodes/viewsettingstab.cpp
M  +5    -0    dolphin/src/settings/viewmodes/viewsettingstab.h

http://commits.kde.org/kde-baseapps/94fe71342f5cfeb9d2d5566b566a7ae5208ca882