Show icon size as tooltip when adjusting icon size

BUG:292700
FIXED-IN: 4.10.0
REVIEW: 105990